Refactor code structure for improved readability and maintainability

--- a/docs/pages/company/about-us.mdx
+++ b/docs/pages/company/about-us.mdx
@@ -24,8 +24,8 @@ organizational design, systems thinking, and strategic implementation.
 
 ## Our Vision
 
-Project Cafecito builds focused software that removes noise from modern workflows. With **Beans**,
-our goal is to make high-signal news and blog intelligence accessible through simple APIs and
-developer-first tooling.
+Project Cafecito builds focused software that removes noise from modern workflows. Our API portfolio
+includes current and future products such as **Beans**, **Cortado**, and **Latte**, with a shared
+focus on simple APIs and developer-first tooling.
 
 _Last updated: February 19, 2026_
