--- a/docs/pages/company/privacy-policy.mdx
+++ b/docs/pages/company/privacy-policy.mdx
@@ -5,7 +5,8 @@
 ## Introduction
 
 This Privacy Policy explains how **Project Cafecito** ("we," "our," or "us") collects, uses, and
-protects information when you use **Beans** and related services.
+protects information when you use Cafecito API products and related services, including
+**Beans**, **Cortado**, and **Latte**.
 
 ## Information We Collect
 
