--- a/docs/pages/company/terms-of-use.mdx
+++ b/docs/pages/company/terms-of-use.mdx
@@ -2,12 +2,12 @@
 
 **Effective Date:** September 16, 2024
 
-**Beans** is provided by **Project Cafecito**, a project under
+**Cafecito API products** (including Beans, Cortado, and Latte) are provided by **Project Cafecito**, a project under
 **Strategic Implementation Advising, LLC**. By using this service, you agree to these terms.
 
 ## 1. Acceptance of Terms
 
-Use of Beans constitutes acceptance of these terms and the Privacy Policy.
+Use of any Cafecito API product constitutes acceptance of these terms and the Privacy Policy.
 
 ## 2. Permitted Use
 
@@ -34,7 +34,7 @@ You are responsible for content you submit and must have rights to share it.
 
 ## 7. Privacy
 
-Use of the service is also governed by the [Privacy Policy](/privacy-policy).
+Use of the service is also governed by the [Privacy Policy](/company/privacy-policy).
 
 ## 8. Governing Law
 
