--- a/docs/pages/introduction.mdx
+++ b/docs/pages/introduction.mdx
@@ -1,47 +1,38 @@
 ---
-description: Build with Beans News & Blogs API.
-sidebar_label: Beans API
+description: Build with Cafecito APIs.
+sidebar_label: Cafecito APIs
 sidebar_icon: newspaper
 category: "Getting Started"
 ---
 
-![Beans banner](/beans-banner.png)
+![Cafecito banner](/cafecito-banner.png)
 
-# Beans API & MCP Developer Portal
+# Cafecito API & MCP Developer Portal
 
-Build on top of **Beans**, a news and blog intelligence API covering **7000+ sources** across
-business, finance, technology, corporate blogs, and broader global topics.
+Welcome to the developer portal for **Project Cafecito**. This repo and portal are the
+overarching home for Cafecito API products.
 
-Every day, Beans ingests and processes **25000+ new news and blog items** from those sources so you
-can build on fresh, high-signal data.
+## Product portfolio
 
-Beans combines traditional search and AI-native retrieval so your product can move from keyword
-matching to contextual discovery without changing platforms.
-
-## What you get
-
-- **Keyword search** for exact terms, names, and publisher filtering
-- **Vector/semantic search** for intent-based retrieval using embeddings
-- **Trending signals** with social media engagement indicators
-- **Related-article graphing** to track propagation across publishers
-- **Built-in enrichment** including sentiment, entities, and regions
-- **Fast JSON API** with pagination and filter controls
+- [Beans API & MCP](/howtos/beans-api) — live news and blog intelligence product. [Pricing](/pricing/beans-pricing)
+- [Cortado API & MCP](/howtos/cortado-api) — planned future product. [Pricing](/pricing/cortado-pricing)
+- [Latte API & MCP](/howtos/latte-api) — planned future product. [Pricing](/pricing/latte-pricing)
 
 ## Start in 3 steps
 
-1. Read [Get API Key](/api-keys) to generate your token.
-2. Follow [Beans API Guide](/beans-api) for quickstart and code samples.
-3. Explore endpoint details in [API Reference](/api).
+1. Read [Get API Key](/howtos/api-keys) to generate your token.
+2. Open your product guide: [Beans](/howtos/beans-api), [Cortado](/howtos/cortado-api), or [Latte](/howtos/latte-api).
+3. Explore endpoint details in product references: [Beans API](/api/beans), [Cortado API](/api/cortado), [Latte API](/api/latte).
 
-## Core use cases
+## Shared across all products
 
-- News monitoring and intelligence dashboards
-- AI assistants and RAG workflows for current events
-- Market and company tracking for finance or strategy teams
-- Media trend detection and coverage comparison
+- [API Keys](/howtos/api-keys)
+- [About Us](/company/about-us)
+- [Privacy Policy](/company/privacy-policy)
+- [Terms of Use](/company/terms-of-use)
 
 ## Need commercial terms?
 
-See [Pricing](/pricing), [Privacy Policy](/privacy-policy), and [Terms of Use](/terms-of-use).
+See [Pricing](/pricing/beans-pricing).
 
 _Last updated: February 19, 2026_
