--- a/docs/pages/pricing/beans-pricing.mdx
+++ b/docs/pages/pricing/beans-pricing.mdx
@@ -1,4 +1,4 @@
-# Pricing
+# Beans Pricing
 
 Beans uses simple per-request pricing tiers for news and blog intelligence workloads.
 
@@ -44,8 +44,5 @@ Starting **Oct 1**, the Free tier will change to:
 - There is no additional pricing factor for semantic/vector search.
 - Requests that return zero results (for example, strict filters) still count as requests.
 
-## Need a custom package?
-
-For enterprise, research, or redistribution scenarios, contact us for tailored pricing.
 
 _Last updated: February 19, 2026_
